legacy/factory/factory/overlays/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factory
  namespace: factory
spec:
  rules:
    - host: sonarqube.localhost
      http:
        paths:
          - backend:
              service:
                name: sonarqube
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.localhost
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
